<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <TextView
        android:id="@+id/video_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/video_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/video_title" />

    <EditText
        android:id="@+id/video_title"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@+id/video_title_label"
        android:layout_toEndOf="@+id/video_title_label"
        android:layout_marginStart="50dp"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/video_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@id/video_title_label"
        android:layout_alignStart="@id/video_title_label"
        android:text="@string/video_year"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/video_year"/>

    <EditText
        android:id="@+id/video_year"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@+id/video_year_label"
        android:layout_alignStart="@id/video_title"
        android:maxLength="4"
        android:inputType="number"/>

    <TextView
        android:id="@+id/video_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@id/video_year_label"
        android:layout_alignStart="@id/video_year_label"
        android:text="@string/video_location"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/video_location"/>

    <Spinner
        android:id="@+id/video_location"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@+id/video_location_label"
        android:layout_alignStart="@id/video_year" />

    <TextView
        android:id="@+id/video_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@id/video_location_label"
        android:layout_alignStart="@id/video_location_label"
        android:text="@string/video_rating"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/video_rating"/>

    <EditText
        android:id="@+id/video_rating"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_alignBaseline="@+id/video_rating_label"
        android:layout_alignStart="@id/video_location"
        android:maxLength="2"
        android:inputType="number"/>

    <TextView
        android:id="@+id/video_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/video_description"
        android:layout_below="@+id/video_rating_label"
        android:layout_alignStart="@+id/video_rating_label"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/video_description"/>

    <EditText
        android:id="@+id/video_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingStart="25dp" android:paddingEnd="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_below="@+id/video_description_label"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/video_imdb_url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@id/video_description"
        android:layout_alignStart="@id/video_description_label"
        android:text="@string/video_imdb_url"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/video_imdb_url" />

    <EditText
        android:id="@+id/video_imdb_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp" android:paddingEnd="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/video_imdb_url_label"
        android:layout_marginTop="10dp"
        android:inputType="textUri" />

</RelativeLayout>